# Advanced-FitchFork

./: .gitignore  README.md  package-lock.json
backend/ai/: Cargo.toml
backend/ai/src/: lib.rs
backend/ai/src/algorithms/: code_coverage.rs  gatlam.rs  genetic_algorithm.rs  mod.rs  rng.rs
backend/ai/src/utils/: attributes.rs  evaluator.rs  mod.rs  output.rs
backend/api/: Cargo.toml
backend/api/src/: config.rs  lib.rs  main.rs  state.rs
backend/api/src/api/: health.rs  mod.rs  users.rs
backend/api/src/auth/: claims.rs  extractors.rs  guards.rs  middleware.rs  mod.rs
backend/api/src/db/: mod.rs  pool.rs
backend/api/src/response/: mod.rs
backend/api/src/routes/: common.rs  health.rs  mod.rs
backend/api/src/services/: email.rs  mod.rs  moss.rs  moss_archiver.rs
backend/api/src/tests/: users_test.rs
backend/api/src/ws/: auth.rs  handlers.rs  mod.rs  mux.rs  types.rs
backend/api/tests/: example_test.rs  mod.rs  test_helpers.rs
backend/api/tests/auth/: extractors_test.rs  guards_test.rs  mod.rs
backend/api/tests/helpers/: app.rs  config_assert.rs  mod.rs  ws.rs
backend/api/tests/routes/: health_test.rs  mod.rs
backend/api/tests/ws/: chat_handler_test.rs  mod.rs  submission_status_ws_test.rs  system_test.rs  ws_tests.rs
backend/code_manager/: Cargo.toml
backend/code_manager/images/: Dockerfile
backend/code_manager/src/: api.rs  lib.rs  main.rs
backend/code_manager/src/api/: api.rs  mod.rs
backend/code_manager/src/container/: compression.rs  config_management.rs  container.rs  mod.rs
backend/code_manager/src/manager/: manager.rs  mod.rs  queue.rs
backend/code_manager/src/utils/: compression.rs  config_management.rs  mod.rs
backend/code_manager/tests/: queue.rs  run_code.rs
backend/code_runner/: Cargo.toml
backend/code_runner/src/: execution_config.rs  lib.rs  mod.rs  validate_files.rs
backend/code_runner/tests/: interpreter.rs  memo_outputs.rs  submission_outputs.rs
backend/db/: Cargo.toml
backend/db/src/: achievement_engine.rs  achievement_service.rs  achievement_system.rs  comparisons.rs  events.rs  filter_utils.rs  filters.rs  grade.rs  lib.rs  repository.rs  test_utils.rs
backend/db/src/factories/: assignment_factory.rs  mod.rs  module_factory.rs  user_factory.rs
backend/db/src/migrations/: 20250518141720_create_users.sql  20250518141720_temporary.sql  20250518141720_users.sql  20250518141721_create_modules.sql  20250518141722_create_assignments.sql  20250518141740_modules.sql
backend/db/src/models/: achievement_progress.rs  achievements.rs  announcements.rs  assignment.rs  assignment_file.rs  assignment_files.rs  assignment_interpreter.rs  assignment_main_files.rs  assignment_memo_files.rs  assignment_memo_output.rs  assignment_overwrite_file.rs  assignment_student_files.rs  assignment_submission.rs  assignment_submission_output.rs  assignment_task.rs  attendance_record.rs  attendance_session.rs  grade.rs  mod.rs  module.rs  module_lecturer.rs  module_student.rs  module_tutor.rs  moss_report.rs  password_reset_token.rs  plagiarism_case.rs  submission_file.rs  system_metric.rs  ticket_messages.rs  tickets.rs  user.rs  user_module_role.rs
backend/db/src/repositories/: announcement_repository.rs  assignment_file_repository.rs  assignment_interpreter_repository.rs  assignment_memo_output_repository.rs  assignment_overwrite_file_repository.rs  assignment_repository.rs  assignment_submission_output_repository.rs  assignment_submission_repository.rs  assignment_task_repository.rs  mod.rs  module_repository.rs  password_reset_token_repository.rs  plagiarism_case_repository.rs  repository.rs  ticket_message_repository.rs  ticket_repository.rs  user_module_role_repository.rs  user_repository.rs
backend/db/src/seeders/: assignment_seeder.rs  dev.rs  mod.rs  module_seeder.rs  user_seeder.rs
backend/db/src/tests/: achievement_engine_tests.rs  integration_tests.rs  mod.rs
backend/marker/: Cargo.toml
backend/marker/src/: allocator_parser.rs  complexity_parser.rs  coverage_parser.rs  error.rs  feedback.rs  file_loader.rs  input_parser.rs  lib.rs  output_comparator.rs  report.rs  scorer.rs  types.rs
backend/marker/src/comparators/: exact_comparator.rs  mod.rs  percentage_comparator.rs  regex_comparator.rs
backend/marker/src/feedback/: ai_feedback.rs  auto_feedback.rs  manual_feedback.rs  mod.rs
backend/marker/src/parsers/: allocator_parser.rs  complexity_parser.rs  coverage_parser.rs  mod.rs  output_parser.rs
backend/marker/src/traits/: comparator.rs  feedback.rs  mod.rs  parser.rs  report_parser.rs
backend/marker/src/utilities/: file_loader.rs  line_normalization.rs  mod.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  main.rs  migrator.rs  runner.rs
backend/migration/src/migrations/: m202505290001_create_users.rs  m202505290002_create_modules.rs  m202505290008_create_tasks.rs  (+24 more)
backend/moss_parser/: Cargo.toml
backend/moss_parser/src/: lib.rs  main.rs
backend/seeder/: Cargo.toml
backend/seeder/src/: main.rs  seed.rs
backend/services/: Cargo.toml
backend/services/src/: announcement.rs  announcement_service.rs  assignment.rs  assignment_file.rs  assignment_file_service.rs  assignment_interpreter.rs  assignment_interpreter_service.rs  assignment_memo_output.rs  assignment_memo_output_service.rs  assignment_overwrite_file.rs  assignment_overwrite_file_service.rs  assignment_service.rs  assignment_submission.rs  assignment_submission_output.rs  assignment_submission_output_service.rs  assignment_submission_service.rs  assignment_task.rs  assignment_task_service.rs  attendance_record.rs  attendance_session.rs  lib.rs  module.rs  module_service.rs  password_reset_token.rs  password_reset_token_service.rs  plagiarism_case.rs  plagiarism_case_service.rs  service.rs  ticket.rs  ticket_message.rs  ticket_message_service.rs  ticket_service.rs  user.rs  user_module_role.rs  user_module_role_service.rs  user_service.rs  util.rs  util_service.rs
backend/util/: Cargo.toml
backend/util/src/: config.rs  filters.rs  http.rs  languages.rs  lib.rs  paths.rs  state.rs  system_health.rs  test_helpers.rs
(+1656 files in other folders)
