[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
db = { path = "../db" }
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
code-runner = { path = "../code_runner" }  
