[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Workspace-local crates
common = { path = "../common" }
db = { path = "../db" }
util = { path = "../util" }

# Web framework and middleware
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }

# Async and concurrency
tokio = { version = "1", features = ["full"] }

# Serialization and validation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.16", features = ["derive"] }

# Auth and security
jsonwebtoken = "9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP utilities
headers = "0.4"

# Misc
lazy_static = "1.4"
regex = "1.10"

# Database
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }

sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }
futures = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
once_cell = "1.8"
mime_guess = "2.0.5"
code-runner = { path = "../code_runner" }
