[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Workspace-local crates
common = { path = "../common" }
db = { path = "../db" }
util = { path = "../util" }
marker = { path = "../marker" }

# Web framework and middleware
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }

# Async and concurrency
tokio = { version = "1.0", features = ["full"] }

# Serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }

# Auth and security
jsonwebtoken = "9.0"

# Time handling
chrono = "0.4"

# HTTP utilities
headers = "0.4"

# Misc
lazy_static = "1.4"
regex = "1.10"

# Database
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio-native-tls", "macros", ] }
futures = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
once_cell = "1.8"
mime_guess = "2.0"
code-runner = { path = "../code_runner" }
tokio-util = { version = "0.7" , features = ["io"]}
md5 = "0.8"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-orm-migration = "1.1"
migration = { path = "../migration" }