[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Workspace-local crates
common = { path = "../common" }
db = { path = "../db" }
util = { path = "../util" }
marker = { path = "../marker" }
migration = { path = "../migration" }
code-runner = { path = "../code_runner" }
moss_parser = { path = "../moss_parser" }
ai = { path = "../ai" }

# Web framework and middleware
axum = { version = "0.8", features = ["multipart", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }

# Async and concurrency
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
# Serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }

# Auth and security
jsonwebtoken = "9.0"

# Time handling
chrono = "0.4"

# HTTP utilities
headers = "0.4"

# Misc
lazy_static = "1.4"
regex = "1.10"

# Database
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
futures = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
once_cell = "1.21"
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
md5 = "0.8"
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-orm-migration = "1.1"

futures-util = "0.3"
tokio-tungstenite = { version = "0.27", features = ["connect"] }
url = "2.5"
portpicker = "0.1"
zip = "4.3"
tempfile = "3.5.0"
walkdir = "2.5.0"

# For archiving MOSS reports
anyhow = "1.0"
percent-encoding = "2.3"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream"] }
scraper = "0.24.0"
sha2 = "0.10"
hex = "0.4"
bytes = "1.6"


[dev-dependencies]
serial_test = "3.2"
zip = "4.3.0"
tar = "0.4.44"
flate2 = "1.1.2"
tempfile = "3.5.0"
