[package]
name = "code_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
util = { path = "../util" }
once_cell = "1.21.3"
hyper = "1.6.0"
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
tempfile = "3.20.0"
zip = "5.1.1"
flate2 = "1.1.2"
tar = "0.4.44"
dotenv = "0.15.0"
