[package]
name = "code-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = "4.3"
tar = "0.4.44"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
chrono = { version = "0.4", features = ["serde"] }
db = { path = "../db" }
flate2 = "1.1.2"
util = { path = "../util" }
shell-escape = "0.1.5"

k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }


[dev-dependencies]
dotenvy = "0.15"
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
