[package]
name = "code-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
util = { path = "../util" }
services = { path = "../services" }

zip = "5.0"
tar = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.1"
shell-escape = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
dotenvy = "0.15"

[lib]
name = "code_runner"
path = "src/lib.rs"