[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
migration = { path = "../migration" }
sea-orm-migration = "0.12"
rand = { version = "0.8", features = ["std"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
log = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"