[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls"] }
sea-orm-migration = "1.1"
migration = { path = "../migration" }
rand = "0.9"
strum = { version = "0.26", features = ["derive"] }  # Using older version of strum because sea-orm is behind
log = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
util = { path = "../util" }
hex = "0.4"
ipnet = "2"

[dev-dependencies]
tempfile = "3.0"
zip = "5.1"