[package]
name = "marker"
version = "0.1.0"
edition = "2024"

[dependencies] 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
dotenvy = "0.15"