[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
sea-orm-migration = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
colored = "2"
futures = "0.3"

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"
