[package]
name = "moss_parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "moss_parser"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"], optional = true }
regex = "1"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "http2", "json"] }
scraper = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }