[package]
name = "seeder"
version = "0.1.0"
edition = "2024"

[dependencies]
services = { path = "../services" }
util = { path = "../util" }

tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
dotenvy = "0.15"
fake = "4.3"
fastrand = "2.0"
colored = "3.0"
futures = "0.3"
rand = "0.8" # Using older version of rand because sqlx and other packages are behind
zip = "5.0"
