[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.0"
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
jsonwebtoken = "9"
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
once_cell = "1"
dotenvy = "0.15"
sea-orm-migration = "1.1"
async-trait = "0.1"
bytes = "1"
regex = "1.11.2"
zip = "5.0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
serial_test = "3"
